# ias13-tutorial

./: CMakeLists.txt  README.md
forms/: main_window.ui
include/: color.h  main_window.h  random_walker_segmentation.h  seed_selection.h
include/graph/impl/: common.hpp  edge_weight_computer.hpp  voxel_grid_graph_builder.hpp
src/: main_window.cpp  seed_selection.cpp
